# shitty_crypter

./: .gitignore  Cargo.toml  r.md  r2.md
shitty_crypto/: Cargo.toml
shitty_crypto/src/: lib.rs
src/: main.rs
