[package]
name = "shitty_crypter"
version = "0.1.0"
authors = ["Valink16 <valuthyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shitty_crypto = { path = "./shitty_crypto"}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3